# my-opencv-lab

./: LICENSE  README.md  combinational_optimization.ipynb  convert_video.sh  jupyter-requirements.txt  paralelling_itertools.ipynb  people_detection.ipynb  people_detection2.ipynb  people_tracking.ipynb  people_tracking.py  pyproject.toml  python-requirements.txt  using_ground_truth.ipynb
