[tool.poetry]
name = "my-opencv-lab"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "3.8.0"
numpy = "^1.20.1"
opencv-contrib-python = "^4.5.1"
imutils = "^0.5.4"
jupyter = "^1.0.0"
notebook = "^6.3.0"
autopep8 = "^1.5.6"
jupyter-contrib-nbextensions = "^0.5.1"
ipywebrtc = "^0.5.0"
vim-kernel = {version = "^0.0.4", extras = ["vim"]}
jupyterlab-vim = {version = "^0.13.4", extras = ["vim"]}
python-vim = {version = "^0.3", extras = ["vim"]}
black = "^21.4b0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
